testdata/fixtures/review/positive/todo_js.js
// TODO: validate the input before using it
export function save(x) {
  return x;
}
