testdata/fixtures/review/negative/todo_no_marker_js.js
// a perfectly ordinary explanatory comment
export function id(x) {
  return x;
}
